<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
      <groupId>com.ibm</groupId>
      <artifactId>sonar-cryptography</artifactId>
      <version>2.0.0-SNAPSHOT</version>
  </parent>

  <artifactId>go</artifactId>
  <name>Sonar Cryptography Plugin :: Go</name>

  <properties>
      <maven.compiler.source>17</maven.compiler.source>
      <maven.compiler.target>17</maven.compiler.target>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
        <dependency>
            <groupId>com.ibm</groupId>
            <artifactId>engine</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.ibm</groupId>
            <artifactId>output</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
          <groupId>com.ibm</groupId>
          <artifactId>enricher</artifactId>
          <version>2.0.0-SNAPSHOT</version>
        </dependency>
      <dependency>
          <groupId>com.ibm</groupId>
          <artifactId>rules</artifactId>
          <version>2.0.0-SNAPSHOT</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>org.sonarsource.analyzer-commons</groupId>
          <artifactId>sonar-analyzer-test-commons</artifactId>
          <version>2.18.0.3393</version>
          <scope>test</scope>
      </dependency>
  </dependencies>

</project>
